[package]
name = "fitbit-hr"
version = "0.1.0"
authors = ["Owen Gage <owengage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4"
serde_json = "1"
reqwest = "0.11"
serde = "1"
chrono = "0.4"
lambda_runtime = "0.3"
tokio = "1"
rusoto_core = "0.46"
rusoto_s3 = "0.46"
rusoto_secretsmanager = "0.46"
openssl = { version = "0.10", features = ["vendored"] }